# zynthos

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  shell.rs  vga_buffer.rs
src/allocator/: bump.rs  linked_list.rs
src/fs/: mod.rs  ramfs.rs
src/task/: keyboard.rs
