[package]
name = "zynthos"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = { version = "0.9.31", features = ["map_physical_memory"] }
spin = "0.10.0"
volatile = "0.6.1"
x86_64 = "0.15.2"
uart_16550 = "0.3.2"
pic8259 = "0.10.1"
pc-keyboard = "0.8.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial","stdio","-display","none"]
test-success-exit-code = 33
test-timeout = 120
